--- a/Frontend/All_Ind_admin.html
+++ b/Frontend/All_Ind_admin.html
@@ -62,6 +62,15 @@
                 margin-top: 1rem !important;
             }
         }
+
+        .message-card {
+            text-align: center;
+            font-size: xx-large;
+            padding: 20px;
+            margin-top: 20px;
+            min-height: 1000px;
+            /* Set minimum height */
+        }
     </style>
 </head>
 
@@ -166,6 +175,15 @@
             const container = document.getElementById('volunteer-container');
             container.innerHTML = ''; // Clear previous content
 
+            if (volunteers.length === 0) {
+                const message = document.createElement('div');
+                message.className = 'message-card'; // Apply custom message-card class
+                message.textContent = 'No Volunteers';
+
+                container.appendChild(message);
+                return;
+            }
+
             volunteers.forEach(volunteer => {
                 const volunteerCard = `
                     <div class="container mt-2">
@@ -194,8 +212,7 @@
                                         </div>
                                         <div class="text-center mt-3">
                                             <button class="btn btn-danger btn-verify" style="border-radius: 5px;"
-                                                onclick="deleteVolunteer('${volunteer._id}')">Delete
-                                                Volunteer</button>
+                                                    onclick="confirmDeleteVolunteer('${volunteer._id}')">Delete Volunteer</button>
                                         </div>
                                     </div>
                                 </div>
@@ -232,6 +249,18 @@
         }
 
         window.onload = fetchVolunteers();
+    </script>
+
+    <script>
+        function confirmDeleteVolunteer(volunteerId) {
+            if (confirm("Are you sure you want to delete this volunteer?")) {
+                // Call your deleteVolunteer function here
+                deleteVolunteer(volunteerId);
+            } else {
+                // Optional: Provide feedback or take other action if the user cancels
+                console.log("Deletion canceled.");
+            }
+        }
     </script>
 
     <!-- Footer Start -->
