--- a/Frontend/All_ngo_admin.html
+++ b/Frontend/All_ngo_admin.html
@@ -60,6 +60,15 @@
         margin-top: 1rem !important;
       }
     }
+
+    .message-card {
+      text-align: center;
+      font-size: xx-large;
+      padding: 20px;
+      margin-top: 20px;
+      min-height: 1000px;
+      /* Set minimum height */
+    }
   </style>
 </head>
 
@@ -194,6 +203,15 @@
       const container = document.getElementById('ngo-container');
       container.innerHTML = ''; // Clear previous content
 
+      if (ngos.length === 0) {
+        const message = document.createElement('div');
+        message.className = 'message-card'; // Apply custom message-card class
+        message.textContent = 'No NGOs';
+
+        container.appendChild(message);
+        return;
+      }
+
       ngos.forEach(ngo => {
         const ngoCard = `
                 <div class="container mt-2">
@@ -254,7 +272,7 @@
                                     </div>
                                     <div class="text-center mt-3">
                                         <button class="btn btn-danger btn-verify" style="border-radius: 5px;"
-                                            onclick="deleteNGO('${ngo._id}')">Delete NGO</button>
+                                                onclick="confirmDelete('${ngo._id}')">Delete NGO</button>
                                     </div>
                                 </div>
                             </div>
@@ -293,6 +311,18 @@
       await fetchNGOs(); // Fetch NGOs on page load
     });
 
+  </script>
+
+  <script>
+    function confirmDelete(ngoId) {
+      if (confirm("Are you sure you want to delete this NGO?")) {
+        // Call your deleteNGO function here
+        deleteNGO(ngoId);
+      } else {
+        // Optional: Provide feedback or take other action if the user cancels
+        console.log("Deletion canceled.");
+      }
+    }
   </script>
 
 
