--- a/Frontend/index_admin.html
+++ b/Frontend/index_admin.html
@@ -120,7 +120,7 @@
     </nav>
     <!-- END nav -->
 
-    <div class="container text-center" style="margin: 6rem 0 0 10rem">
+    <div class="container text-center my-5 mx-lg-auto mt-5 pt-5">
         <h2>Hello Admin!</h2>
     </div>
 
