--- a/Frontend/restaurant_main_2.html
+++ b/Frontend/restaurant_main_2.html
@@ -32,6 +32,15 @@
             background: #343a40 !important;
             top: 0;
         }
+
+        .message-card {
+            text-align: center;
+            font-size: xx-large;
+            padding: 20px;
+            margin-top: 20px;
+            min-height: 1000px;
+            /* Set minimum height */
+        }
     </style>
 </head>
 
