--- a/Frontend/Profile_Ind.html
+++ b/Frontend/Profile_Ind.html
@@ -357,6 +357,16 @@
     </div>
 
     <script>
+        document.getElementById('logoutLink').addEventListener('click', function (event) {
+            event.preventDefault(); // Prevent the default link action
+            var confirmation = confirm('Are you sure you want to logout?');
+            if (confirmation) {
+                localStorage.clear();
+                window.location.href = 'index.html'; // Redirect to the logout page
+            }
+        });
+    </script>
+    <script>
         const BACKEND_URL = "http://localhost:3000";
         async function fetchProfileData() {
             try {
