--- a/Frontend/about_restaurant.html
+++ b/Frontend/about_restaurant.html
@@ -222,6 +222,7 @@
       event.preventDefault(); // Prevent the default link action
       var confirmation = confirm('Are you sure you want to logout?');
       if (confirmation) {
+        localStorage.clear();
         window.location.href = 'index.html'; // Redirect to the logout page
       }
     });
