--- a/Frontend/accepted_donations_ngo.html
+++ b/Frontend/accepted_donations_ngo.html
@@ -205,6 +205,17 @@
         </div>
     </div>
 
+
+    <script>
+        document.getElementById('logoutLink').addEventListener('click', function (event) {
+          event.preventDefault(); // Prevent the default link action
+          var confirmation = confirm('Are you sure you want to logout?');
+          if (confirmation) {
+            localStorage.clear();
+            window.location.href = 'index.html'; // Redirect to the logout page
+          }
+        });
+      </script>
     <script>
         const BACKEND_URL = "http://localhost:3000"; // Update this with your actual backend URL
 
