--- a/Frontend/accepted_donations_restaurant.html
+++ b/Frontend/accepted_donations_restaurant.html
@@ -280,6 +280,16 @@
     </footer>
 
     <script>
+        document.getElementById('logoutLink').addEventListener('click', function (event) {
+            event.preventDefault(); // Prevent the default link action
+            var confirmation = confirm('Are you sure you want to logout?');
+            if (confirmation) {
+                localStorage.clear();
+                window.location.href = 'index.html'; // Redirect to the logout page
+            }
+        });
+    </script>
+    <script>
         const BACKEND_URL = "http://localhost:3000"; // Update this with your actual backend URL
 
         async function fetchFoodTransactions() {
