--- a/Frontend/pending_donations_restaurant.html
+++ b/Frontend/pending_donations_restaurant.html
@@ -280,6 +280,16 @@
         </div>
     </footer>
 
+    <script>
+        document.getElementById('logoutLink').addEventListener('click', function (event) {
+            event.preventDefault(); // Prevent the default link action
+            var confirmation = confirm('Are you sure you want to logout?');
+            if (confirmation) {
+                localStorage.clear();
+                window.location.href = 'index.html'; // Redirect to the logout page
+            }
+        });
+    </script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
