--- a/Frontend/restaurant_donate.html
+++ b/Frontend/restaurant_donate.html
@@ -219,13 +219,13 @@
           formData.set('packaged', packaged);
 
           // Prepare food photos array
-          const photos = formData.getAll('photos');
-          if (photos.length > 5) {
-            document.getElementById('photo-error').style.display = 'block';
-            return;
-          } else {
-            document.getElementById('photo-error').style.display = 'none';
-          }
+          // const photos = formData.getAll('photos');
+          // if (photos.length > 5) {
+          //   document.getElementById('photo-error').style.display = 'block';
+          //   return;
+          // } else {
+          //   document.getElementById('photo-error').style.display = 'none';
+          // }
 
           try {
             const token = localStorage.getItem('authToken');
