--- a/Frontend/restaurant_register.html
+++ b/Frontend/restaurant_register.html
@@ -75,10 +75,10 @@
                             </div>
                             <div class="form-group">
                                 <label for="password">Password <span class="text-danger">*</span></label>
-                                <input type="password" class="form-control" style="border-radius: 5px;" id="password"
-                                    name="password" placeholder="Enter Password" required
-                                    pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                                    title="Must contain at least one number, one uppercase and lowercase letter, and at least 8 or more characters">
+                                <input type="password" class="form-control" style="border-radius: 5px;" id="password" name="password" placeholder="Password" 
+                                       pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^&*]).{8,}" 
+                                       title="Password must be at least 8 characters long, include at least one lowercase letter, one uppercase letter, one numeric digit, and one special character."
+                                       required>
                             </div>
                             <div class="form-group">
                                 <label for="restaurant_name">Restaurant Name <span class="text-danger">*</span></label>
